Copy Write and SSI from GAP, will share if installed.

--- a/GameData/ContractPacks/KPlanes/Agnencies.cfg
+++ b/GameData/ContractPacks/KPlanes/Agnencies.cfg
@@ -3,6 +3,21 @@
 // Agencies for K-Planes
 //
 
+// Copied from GAP, so do not add if installed.
+// For contracts: Earth equivalent 1900 to 1915.
+// Style: First powered flights.
+AGENT:NEEDS[!GAP,!GAP-JNSQ]
+{
+	name = Wright Aeronautical
+	title = Wright Aeronautical
+	description = Offering airplane rides to the public, and provides air show stunt contracts.
+	logoURL = ContractPacks/KPlanes/Assets/Flags/WrightAeronautical
+	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/WrightAeronautical
+	mentality = NoRandomContractMentality
+}
+
+// For contracts: Earth equivalent 1915 to 1958.
+// Style: Propeller and jet planes, early K-Planes.
 AGENT
 {
 	name = KPlanes_KACA
@@ -13,16 +28,8 @@ AGENT
 	mentality = NoRandomContractMentality
 }
 
-AGENT
-{
-	name = KPlanes_UKAF
-	title = United Kerbal Airforce
-	description = Protecting Kerbal-kind from unknown enemies often requires flying higher, faster and further in the name of science, usually while wearing very cool sunglasses.
-	logoURL = ContractPacks/KPlanes/Assets/Flags/UKAF
-	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/UKAF
-	mentality = NoRandomContractMentality
-}
-
+// For contracts: Earth equivalent 1958 to present day.
+// Style: Propeller and jet planes, X-1 thru X-13 (1946 to 1955)
 AGENT
 {
 	name = KPlanes_KASA
@@ -33,7 +40,8 @@ AGENT
 	mentality = NoRandomContractMentality
 }
 
-// Copied from GAP, so do not add if installed
+// Copied from GAP, so do not add if installed.
+// For contracts: Earth equivalent 1990s to far future.
 AGENT:NEEDS[!GAP,!GAP-JNSQ]
 {
 	name = SSI
