Added contract groups, not depending on GAP as yet.

--- a/GameData/ContractPacks/KPlanes/Agnencies.cfg
+++ b/GameData/ContractPacks/KPlanes/Agnencies.cfg
@@ -3,12 +3,11 @@
 // Agencies for K-Planes
 //
 
-// Copied from GAP, so do not add if installed.
 // For contracts: Earth equivalent 1900 to 1915.
 // Style: First powered flights.
 AGENT:NEEDS[!GAP,!GAP-JNSQ]
 {
-	name = Wright Aeronautical
+	name = KPlanes_Wright
 	title = Wright Aeronautical
 	description = Offering airplane rides to the public, and provides air show stunt contracts.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/WrightAeronautical
@@ -40,13 +39,11 @@ AGENT
 	mentality = NoRandomContractMentality
 }
 
-// Copied from GAP, so do not add if installed.
 // For contracts: Earth equivalent 1990s to far future.
-AGENT:NEEDS[!GAP,!GAP-JNSQ]
+AGENT
 {
-	name = SSI
+	name = KPlanes_SSI
 	title = SSI Aerospace
-	name = SSI Aerospace
 	description = An engineering cooperative focused on developing and testing aerospace assets.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/SSI
 	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/SSI
