Do not need that tag yet.

--- a/GameData/ContractPacks/KPlanes/Agnencies.cfg
+++ b/GameData/ContractPacks/KPlanes/Agnencies.cfg
@@ -5,7 +5,7 @@
 
 // For contracts: Earth equivalent 1900 to 1915.
 // Style: First powered flights.
-AGENT:NEEDS[!GAP,!GAP-JNSQ]
+AGENT
 {
 	name = KPlanes_Wright
 	title = Wright Aeronautical
