Added Strategia patch. Added group sort keys.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -10,6 +10,7 @@ CONTRACT_GROUP
 	minVersion = 2.0.0
 	agent = KPlanes_Wright
 	tip = Planes from around 1900 to 1915...
+	sortKey = aa00
 }
 
 CONTRACT_GROUP
@@ -19,6 +20,7 @@ CONTRACT_GROUP
 	minVersion = 2.0.0
 	agent = KPlanes_KACA
 	tip = Planes, Jets and X-Planes from around 1915 to 1958...
+	sortKey = aa01	
 }
 
 CONTRACT_GROUP
@@ -28,8 +30,8 @@ CONTRACT_GROUP
 	minVersion = 2.0.0
 	agent = KPlanes_KASA
 	tip = Planes, Jets, X-Planes and Shuttles from around 1958 to today...	
+	sortKey = aa02
 }	
-
 
 CONTRACT_GROUP
 {
@@ -38,4 +40,5 @@ CONTRACT_GROUP
 	minVersion = 2.0.0
 	agent = KPlanes_SSI
 	tip = Futuristic flying rocketships that Buck Rogers would fly...
+	sortKey = aa03
 }
