Minor format tidy.

--- a/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
@@ -1,9 +1,11 @@
-//Wright-FirstFlight - Wright Aeronautical: Build and fly your first airplane!
+// -*- conf-javaprop -*-
+//
+// Copied and modified from GAP/Wright-FirstFlight.cfg
 
 CONTRACT_TYPE
 {
 
-	sortKey = a2
+	sortKey = aa01
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -23,9 +25,9 @@ CONTRACT_TYPE
 		
 		REQUIREMENT:NEEDS[AtmosphereAutopilot]
 		{
-		name = PartModuleUnlocked
-		type = PartModuleUnlocked
-		partModule = SyncModuleControlSurface
+			name = PartModuleUnlocked
+			type = PartModuleUnlocked
+			partModule = SyncModuleControlSurface
 		}
 		
 		REQUIREMENT:NEEDS[FerramAerospaceResearch]
@@ -57,7 +59,7 @@ CONTRACT_TYPE
 
 	}
 
-		REQUIREMENT
+	REQUIREMENT
 	{
 		name = Any
 		type = Any
@@ -71,15 +73,13 @@ CONTRACT_TYPE
 		}
 		
 		REQUIREMENT:NEEDS[AJE]
-        {
-            name = PartModuleUnlocked
-            type = PartModuleUnlocked
-            
-            partModule = AJEInlet
-        }
+		{
+		    name = PartModuleUnlocked
+		    type = PartModuleUnlocked
 
+		    partModule = AJEInlet
+		}
 	}
-
 
 //DATA NODES TO PROCESS FOR CONTRACT USE
 
@@ -91,7 +91,6 @@ CONTRACT_TYPE
 		craft = GAPcraftWrightFirstFlight
 		
 	}
-	
 
 //CONTRACT DESCRIPTION
 
