Change to KPlanes and use HomeWorld() instead of Kerbin.

--- a/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
@@ -88,15 +88,15 @@ CONTRACT_TYPE
 	{
 		type = string
 		
-		craft = GAPcraftWrightFirstFlight
+		craft = KPlanesCraftWrightFirstFlight
 		
 	}
 
 //CONTRACT DESCRIPTION
 
-	name = Wright-FirstFlight
+	name = Start-001-FirstFlight
 	title = Build and fly your first airplane!
-	group = GAP
+	group = KPlanes_Start
 	agent = Wright Aeronautical
 
 	description = Thanks to your organization's research efforts, we have finally developed an air-breathing engine that should be light enough to mount to a glider, making controlled powered air flight possible!&br;&br;Previous attempts to use solid rockets for gliders often ended in disaster and a scarcity of willing volunteers.  Wright Aeronautical is asking you to partner with them to build and test a flying machine using an air breathing engine. Your flying machine must have wings so it can control its flight, and must be able to land safely.&br;&br;This is a whole new frontier where many have failed before, so there isn't any investment money available to offer you at the moment. Wright Aeronautical is willing to cover labor costs, snacks, and notify the press, however, you will need to put forth your own funds to acquire the parts necessary for this project. If you succeed, your pilot will acquire both valuable flying skills and your organization will become known worldwide.
@@ -122,7 +122,7 @@ CONTRACT_TYPE
 	
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = Kerbin
+   	targetBody = HomeWorld()
 	
 //Contract Rewards
   	advanceFunds = 2000.0
@@ -286,7 +286,7 @@ CONTRACT_TYPE
 			name = ReachState
 			type = ReachState
 
-			targetBody = Kerbin		
+			targetBody = HomeWorld()		
 			situation = FLYING
 			minSpeed = 15
 			
@@ -315,7 +315,7 @@ CONTRACT_TYPE
 			name = ReachState
 			type = ReachState
 			
-			targetBody = Kerbin
+			targetBody = HomeWorld()
 			situation = LANDED
 			maxSpeed = 0.0
 			
