Fix some initial issues from testing.

--- a/GameData/ContractPacks/KPlanes/Agnencies.cfg
+++ b/GameData/ContractPacks/KPlanes/Agnencies.cfg
@@ -20,8 +20,8 @@ AGENT
 AGENT
 {
 	name = KPlanes_KACA
-	title = Kerbal Advistory Committee for Aeronautics
-	description = An early government foundation set up to undertake, promote and institutionalize aeronautical research. The name was unfortunately not reviewed by anybody sensible.
+	title = KACA
+	description = KACA stands for Kerbal Advistory Committee for Aeronautics. It is an early government foundation set up to undertake, promote and institutionalize aeronautical research. The name was unfortunately not reviewed by anybody sensible.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/KACA
 	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/KACA
 	mentality = NoRandomContractMentality
@@ -32,8 +32,8 @@ AGENT
 AGENT
 {
 	name = KPlanes_KASA
-	title = Kerbal Aeronatuics and Space Administration
-	description = The government agency responsible for civil space, aeronautics research and development. Replaced KACA as soon as somebody sensible noticed the terrible name. 
+	title = KASA
+	description = KASA stands for Kerbal Aeronatuics and Space Administration. It is the government agency responsible for civil space, aeronautics research and development. Replaced KACA as soon as somebody sensible noticed the terrible name. 
 	logoURL = ContractPacks/KPlanes/Assets/Flags/KASA
 	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/KASA
 	mentality = NoRandomContractMentality
