--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -8,9 +8,8 @@ CONTRACT_GROUP
 	name = KPlanes_Start
 	displayName = Basic Plane Development
 	minVersion = 2.0.0
-	agent = KPlanes_Wright
+	agent = Wright Aeronautical
 	tip = Planes from around 1900 to 1915...
-	sortKey = aa00
 }
 
 CONTRACT_GROUP
@@ -18,9 +17,8 @@ CONTRACT_GROUP
 	name = KPlanes_Early
 	displayName = Early K-Plane Development
 	minVersion = 2.0.0
-	agent = KPlanes_KACA
+	agent = KACA
 	tip = Planes, Jets and X-Planes from around 1915 to 1958...
-	sortKey = aa01	
 }
 
 CONTRACT_GROUP
@@ -28,9 +26,8 @@ CONTRACT_GROUP
 	name = KPlanes_Modern
 	displayName = Modern K-Planes and Shuttles, early SSTOs
 	minVersion = 2.0.0
-	agent = KPlanes_KASA
+	agent = KASA
 	tip = Planes, Jets, X-Planes and Shuttles from around 1958 to today...	
-	sortKey = aa02
 }	
 
 CONTRACT_GROUP
@@ -38,7 +35,6 @@ CONTRACT_GROUP
 	name = KPlanes_Future
 	displayName = Futuristic K-Planes, Shuttles, and SSTOs
 	minVersion = 2.0.0
-	agent = KPlanes_SSI
+	agent = SSI Aerospace
 	tip = Futuristic flying rocketships that Buck Rogers would fly...
-	sortKey = aa03
 }
