Fix tips and contract agency.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -9,7 +9,7 @@ CONTRACT_GROUP
 	displayName = Basic Plane Development
 	minVersion = 2.0.0
 	agent = Wright Aeronautical
-	tip = Planes from around 1900 to 1915...
+	tip = Building K-Planes...
 }
 
 CONTRACT_GROUP
@@ -18,7 +18,7 @@ CONTRACT_GROUP
 	displayName = Early K-Plane Development
 	minVersion = 2.0.0
 	agent = KACA
-	tip = Planes, Jets and X-Planes from around 1915 to 1958...
+	tip = Launching rocket plane from another plane...
 }
 
 CONTRACT_GROUP
@@ -27,7 +27,7 @@ CONTRACT_GROUP
 	displayName = Modern K-Planes and Shuttles, early SSTOs
 	minVersion = 2.0.0
 	agent = KASA
-	tip = Planes, Jets, X-Planes and Shuttles from around 1958 to today...	
+	tip = Planes that fly into space sound cool...
 }	
 
 CONTRACT_GROUP
@@ -36,5 +36,5 @@ CONTRACT_GROUP
 	displayName = Futuristic K-Planes, Shuttles, and SSTOs
 	minVersion = 2.0.0
 	agent = SSI Aerospace
-	tip = Futuristic flying rocketships that Buck Rogers would fly...
+	tip = Imagining futuristic space planes that Buck Rogers would fly...
 }
