Put all KPlane groups under one banner.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -5,36 +5,51 @@
 
 CONTRACT_GROUP
 {
-	name = KPlanes_Start
-	displayName = Basic Plane Development
-	minVersion = 2.0.0
-	agent = Wright Aeronautical
-	tip = Building K-Planes...
-}
-
-CONTRACT_GROUP
-{
-	name = KPlanes_Early
-	displayName = Early K-Plane Development
-	minVersion = 2.0.0
-	agent = KACA
-	tip = Launching rocket plane from another plane...
-}
-
-CONTRACT_GROUP
-{
-	name = KPlanes_Modern
-	displayName = Modern K-Planes and Shuttles, early SSTOs
-	minVersion = 2.0.0
-	agent = KASA
-	tip = Planes that fly into space sound cool...
-}	
-
-CONTRACT_GROUP
-{
-	name = KPlanes_Future
-	displayName = Futuristic K-Planes, Shuttles, and SSTOs
+	name = KPlanes
+	displayName = K-Planes
 	minVersion = 2.0.0
 	agent = SSI Aerospace
-	tip = Imagining futuristic space planes that Buck Rogers would fly...
+
+	maxCompletions = 1
+	maxSimultaneous = 3		// Allows Speed, Height and Distance in one go, but not too crazy.
+
+	CONTRACT_GROUP
+	{
+		name = KPlanes_Start
+		displayName = Basic Plane Development
+		minVersion = 2.0.0
+		agent = Wright Aeronautical
+		tip = Building K-Planes...
+		sortKey = a01
+	}
+
+	CONTRACT_GROUP
+	{
+		name = KPlanes_Early
+		displayName = Early K-Plane Development
+		minVersion = 2.0.0
+		agent = KACA
+		tip = Launching rocket plane from another plane...
+		sortKey = a02
+	}
+
+	CONTRACT_GROUP
+	{
+		name = KPlanes_Modern
+		displayName = Modern K-Planes and Shuttles, early SSTOs
+		minVersion = 2.0.0
+		agent = KASA
+		tip = Planes that fly into space sound cool...
+		sortKey = a03
+	}	
+
+	CONTRACT_GROUP
+	{
+		name = KPlanes_Future
+		displayName = Futuristic K-Planes, Shuttles, and SSTOs
+		minVersion = 2.0.0
+		agent = SSI Aerospace
+		tip = Imagining futuristic space planes that Buck Rogers would fly...
+		sortKey = a04
+	}
 }
