Added reward scaling.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -52,4 +52,31 @@ CONTRACT_GROUP
 		tip = Imagining futuristic space planes that Buck Rogers would fly...
 		sortKey = a04
 	}
+
+	DATA
+	{
+		type = double
+
+		Scale = HomeWorld().Radius / 6000.0
+		PI = 3.141592653589793238
+		Circum = 2.0 * @KPlanes:PI * HomeWorld().Radius
+
+		title = Scaling adjustments
+		requiredValue = false
+	}
+
+	DATA
+	{
+		type = double
+
+		RewardAdvanceFunds	= 1000.0	* @KPlanes:Scale
+		RewardFunds		= 5000.0	* @KPlanes:Scale
+		RewardReputation	= 5.0		* @KPlanes:Scale
+		RewardScience		= 5.0		* @KPlanes:Scale
+		FailureFunds		= 4000.0	* @KPlanes:Scale
+		FailureReputation	= 5.0		* @KPlanes:Scale
+
+		title = Reward scaling
+		requiredValue = false
+	}
 }
