--- a/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
@@ -88,7 +88,7 @@ CONTRACT_TYPE
 	{
 		type = string
 		
-		craft = KPlanesCraftWrightFirstFlight
+		craft = KPlanesCraft_Start_001
 		
 	}
 
@@ -125,14 +125,14 @@ CONTRACT_TYPE
    	targetBody = HomeWorld()
 	
 //Contract Rewards
-  	advanceFunds = 2000.0
-  	rewardFunds = 10000.0
-  	rewardReputation = 50.0
- 	rewardScience = 10.0
+  	advanceFunds = 2 * @KPlanes:RewardAdvanceFunds
+  	rewardFunds = 2 * @KPlanes:RewardFunds
+  	rewardReputation = 2 * @KPlanes:RewardReputation
+ 	rewardScience = 2 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 4000.0
- 	failureReputation = 5.0
+  	failureFunds = 2 * @KPlanes:FailureFunds
+ 	failureReputation = 2 * @KPlanes:FailureReputation
 
 	
 //BEHAVIOURS TO DO WHEN CREATING CONTRACT
