Added more scaling adjustment data.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -56,18 +56,18 @@ CONTRACT_GROUP
 	DATA
 	{
 		type = double
+		title = Scaling adjustments
+		requiredValue = false
 
 		Scale = HomeWorld().Radius / 6000.0
 		PI = 3.141592653589793238
-		Circum = 2.0 * @KPlanes:PI * HomeWorld().Radius
-
-		title = Scaling adjustments
-		requiredValue = false
 	}
 
 	DATA
 	{
 		type = double
+		title = Reward scaling
+		requiredValue = false
 
 		RewardAdvanceFunds	= 1000.0	* @KPlanes:Scale
 		RewardFunds		= 5000.0	* @KPlanes:Scale
@@ -75,8 +75,42 @@ CONTRACT_GROUP
 		RewardScience		= 5.0		* @KPlanes:Scale
 		FailureFunds		= 4000.0	* @KPlanes:Scale
 		FailureReputation	= 5.0		* @KPlanes:Scale
+	}
 
-		title = Reward scaling
+	DATA
+	{
+		type = double
+		title = Altitude scaling
 		requiredValue = false
+
+		FlyingHighKM		= Round(HomeWorld().FlyingAltitudeThreshold() / 1000.0)
+		SpaceLowKM		= Round(HomeWorld().AtmosphereAltitude() / 1000.0)
+		SpaceHighKM		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0)
+
+		// This is all rough, not based on reality
+		TroposphereLowKM	= Round(@KPlanes:FlyingHighKM * 0.33333)
+		TroposphereHighKM	= Round(@KPlanes:FlyingHighKM * 0.5)
+		StratosphereLowKM	= @KPlanes:FlyingHighKM
+		StratosphereHighKM	= Round((@KPlanes:SpaceLowKM - @KPlanes:FlyingHighKM) * 0.3333) + @KPlanes:FlyingHighKM
+		MesosphereLowKM		= Round(((@KPlanes:SpaceLowKM - @KPlanes:FlyingHighKM) * 0.3846) + @KPlanes:FlyingHighKM
+		MesosphereHighKM	= Round(((@KPlanes:SpaceLowKM - @KPlanes:FlyingHighKM) * 0.6666) + @KPlanes:FlyingHighKM
+	}
+
+	DATA
+	{
+		type = double
+		title = Speed scaling
+		requiredValue = false
+
+		Mach			= 343		// (m/s) Speed of sound at sea level, plus a bit
+	}
+
+	DATA
+	{
+		type = double
+		title = Distance scaling
+		requiredValue = false
+
+		Circum			= 2.0 * @KPlanes:PI * HomeWorld().Radius	// (m) Homeworld circumference
 	}
 }
