More balancing and value conversion/scaling work.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -83,17 +83,20 @@ CONTRACT_GROUP
 		title = Altitude scaling
 		requiredValue = false
 
-		FlyingHighKM		= Round(HomeWorld().FlyingAltitudeThreshold() / 1000.0)
-		SpaceLowKM		= Round(HomeWorld().AtmosphereAltitude() / 1000.0)
-		SpaceHighKM		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0)
+		FlyingHigh		= Round(HomeWorld().FlyingAltitudeThreshold() / 1000.0)
+		SpaceLow		= Round(HomeWorld().AtmosphereAltitude() / 1000.0)
+		SpaceHigh		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0)
 
 		// This is all rough, not based on reality
-		TroposphereLowKM	= Round(@KPlanes:FlyingHighKM * 0.33333)
-		TroposphereHighKM	= Round(@KPlanes:FlyingHighKM * 0.5)
-		StratosphereLowKM	= @KPlanes:FlyingHighKM
-		StratosphereHighKM	= Round((@KPlanes:SpaceLowKM - @KPlanes:FlyingHighKM) * 0.3333) + @KPlanes:FlyingHighKM
-		MesosphereLowKM		= Round(((@KPlanes:SpaceLowKM - @KPlanes:FlyingHighKM) * 0.3846) + @KPlanes:FlyingHighKM
-		MesosphereHighKM	= Round(((@KPlanes:SpaceLowKM - @KPlanes:FlyingHighKM) * 0.6666) + @KPlanes:FlyingHighKM
+		TroposphereLow		= Round(@KPlanes:FlyingHigh * 0.33333)
+		TroposphereHigh		= Round(@KPlanes:FlyingHigh * 0.5)
+		StratosphereLow		= @KPlanes:FlyingHigh
+		StratosphereHigh	= Round((@KPlanes:SpaceLow - @KPlanes:FlyingHigh) * 0.3333) + @KPlanes:FlyingHigh
+		MesosphereLow		= Round(((@KPlanes:SpaceLow - @KPlanes:FlyingHigh) * 0.3846) + @KPlanes:FlyingHigh
+		MesosphereHigh		= Round(((@KPlanes:SpaceLow - @KPlanes:FlyingHigh) * 0.6666) + @KPlanes:FlyingHigh
+
+		// Orbital heights, GEO has to be computed from an orbit generator
+		SpaceLEO		= Round(SpaceLow * 1.2)
 	}
 
 	DATA
