--- a/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
@@ -1,9 +1,11 @@
-//Wright-2500m - Wright Aeronautical: Fly an airplane to 2500m.
+// -*- conf-javaprop -*-
+//
+// Copied and modified from GAP/Wright-FirstFlight.cfg
 
 CONTRACT_TYPE
 {
 
-	sortKey = a3
+	sortKey = a002
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -11,12 +13,12 @@ CONTRACT_TYPE
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-FirstFlight
+
+		contractType = Start-001-FirstFlight
 		minCount = 1
-		
+
 	}
-	
+
 
 //DATA NODES TO PROCESS FOR CONTRACT USE
 
@@ -24,56 +26,54 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		
-		craft = GAPcraftWright2500m
-		
+
+		craft = KPlanesCraft_Start_002
+
 	}
-	
 
 //CONTRACT DESCRIPTION
 
-//Contract Descriptions
-	name = Wright-2500m
+	name = Start-002-FlyingHigher
 	title = Fly an airplane to 2,500m.
-	group = GAP
-	agent = Wright Aeronautical
-	
+	group = KPlanes_Start
+	agent = KPlanes_Wright
+
 	description = Taking off and landing is easy. Flying up to 2,500m with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
-	
+
 	synopsis = Simply launch an airplane from the runway, fly up to 2,500m, then land back at the runway safely.
-	
+
 	notes = Enjoy the view!
-	
+
 	completedMessage = Another historic flight completed!&br;&br;Your pilot is starting to showing some amazing skill with that last landing.
 
 //Contract Limits
-  	maxCompletions = 1
+   	maxCompletions = 1
    	maxSimultaneous = 1
 //	weight = 100.0
 
 	autoAccept = false
 	declinable = true
 	cancellable = true
-	
+
 	minExpiry = 7.0
 	maxExpiry = 7.0
 	deadline = 0
- 
+
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = Kerbin
+   	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 2000
-  	rewardFunds = 8000.0
-  	rewardReputation = 5.0
- 	rewardScience = 3.0
+  	advanceFunds = 1 * @KPlanes:RewardAdvanceFunds
+  	rewardFunds = 1 * @KPlanes:RewardFunds
+  	rewardReputation = 1 * @KPlanes:RewardReputation
+ 	rewardScience = 1 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 4000.0
- 	failureReputation = 5.0
-	
-	
+  	failureFunds = 1 * @KPlanes:FailureFunds
+ 	failureReputation = 1 * @KPlanes:FailureReputation
+
+
 //PARAMETERS FOR CONTRACT COMPLETION
 
 //Craft definition
@@ -82,7 +82,7 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = Your aircraft must
-		
+
 		define = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
@@ -91,10 +91,10 @@ CONTRACT_TYPE
 			name = HasCrew
 			type = HasCrew
 			title = have a certified pilot
-			
+
 			trait = Pilot
 			minCrew = 1
-		
+
 			disableOnStateChange = false
 			hideChildren = true
 
@@ -105,20 +105,20 @@ CONTRACT_TYPE
 			name = PartValidation
 			type = PartValidation
 			title = have wings
-			
+
 			category = Aero
-			
+
 			disableOnStateChange = false
 			hideChildren = true
 
 		}
-		
+
 		PARAMETER
 		{
 			name = All
 			type = All
 			title = have an air breathing engine only
-			
+
 			PARAMETER
 			{
 				name = PartValidation
@@ -130,16 +130,16 @@ CONTRACT_TYPE
 					MODULE
 					{
 						EngineType = SolidBooster
-						
+
 					}
-					
+
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-			
+
 			}
-			
+
 			PARAMETER
 			{
 				name = PartValidation
@@ -151,51 +151,51 @@ CONTRACT_TYPE
 					MODULE
 					{
 						EngineType = LiquidFuel
-						
+
 					}
-					
+
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-			
+
 			}
-			
+
 
 			PARAMETER
 			{
 				name = HasResource
 				type = HasResource
 				title = not have any solid rocket fuel
-				
+
 				resource = SolidFuel				
 				minQuantity = 0.0
 				maxQuantity = 0.0
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-		
+
 			}
-			
+
 			PARAMETER
 			{
 				name = HasResource
 				type = HasResource
 				title = not have any oxidizer
-				
+
 				resource = Oxidizer				
 				minQuantity = 0.0
 				maxQuantity = 0.0
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-		
+
 			}
-			
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		disableOnStateChange = false
 
 	}
@@ -206,14 +206,14 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = fly up to 2,500m
-		
+
 		vessel = @/craft
-		
+
 		PARAMETER
 		{
 			name = ReachState
 			type = ReachState
-			
+
 			targetBody = Kerbin
 			situation = FLYING
 			minAltitude = 2500
@@ -221,9 +221,9 @@ CONTRACT_TYPE
 			disableOnStateChange = true
 			hideChildren = true
 			hidden = true
-			
+
 		}
-	
+
 		completeInSequence = true
 		disableOnStateChange = true
 		hideChildren = true	
@@ -236,7 +236,7 @@ CONTRACT_TYPE
 		name = Any
 		type = Any
 		title = and then land and stop
-		
+
 		PARAMETER
 		{
 			name = Any
@@ -248,14 +248,14 @@ CONTRACT_TYPE
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = the KSC Runway
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
+
 					targetBody = Kerbin
 					biome = Runway
 					situation = LANDED
@@ -270,20 +270,20 @@ CONTRACT_TYPE
 				hideChildren = true		
 
 			}
-			
+
 			PARAMETER
 			{
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = or the Spaceplane Hangar Air Terminal
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
+
 					targetBody = Kerbin
 					biome = SPH
 					situation = LANDED
@@ -293,16 +293,16 @@ CONTRACT_TYPE
 					hideChildren = true
 
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true		
 
 			}
-		
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		completeInSequence = true
 		disableOnStateChange = false
 
@@ -314,23 +314,23 @@ CONTRACT_TYPE
 		name = All
 		type = All
 		title = safely
-		
+
 		PARAMETER
 		{
 			name = VesselNotDestroyed
 			type = VesselNotDestroyed
 			title = without destroying your aircraft
-			
+
 			vessel = @/craft
 
 		}
-		
+
 		PARAMETER
 		{
 			name = KerbalDeaths
 			type = KerbalDeaths
 			title = or killing anyone
-			
+
 			vessel = @/craft
 
 		}
@@ -338,6 +338,6 @@ CONTRACT_TYPE
 		completeInSequence = true
 		disableOnStateChange = true
 
-	}	
-	
+	}
+
 }
