--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -8,7 +8,7 @@ CONTRACT_GROUP
 	name = KPlanes
 	displayName = K-Planes
 	minVersion = 2.0.0
-	agent = SSI Aerospace
+	agent = KPlanes_SSI
 
 	maxCompletions = 1
 	maxSimultaneous = 3		// Allows Speed, Height and Distance in one go, but not too crazy.
@@ -18,7 +18,7 @@ CONTRACT_GROUP
 		name = KPlanes_Start
 		displayName = Basic Plane Development
 		minVersion = 2.0.0
-		agent = Wright Aeronautical
+		agent = KPlanes_Wright
 		tip = Building K-Planes...
 		sortKey = a01
 	}
@@ -28,8 +28,8 @@ CONTRACT_GROUP
 		name = KPlanes_Early
 		displayName = Early K-Plane Development
 		minVersion = 2.0.0
-		agent = KACA
-		tip = Launching rocket plane from another plane...
+		agent = KPlanes_KACA
+		tip = Launching K-Plane from another plane...
 		sortKey = a02
 	}
 
@@ -38,8 +38,8 @@ CONTRACT_GROUP
 		name = KPlanes_Modern
 		displayName = Modern K-Planes and Shuttles, early SSTOs
 		minVersion = 2.0.0
-		agent = KASA
-		tip = Planes that fly into space sound cool...
+		agent = KPlanes_KASA
+		tip = Adding more wings to K-Planes...
 		sortKey = a03
 	}	
 
@@ -48,7 +48,7 @@ CONTRACT_GROUP
 		name = KPlanes_Future
 		displayName = Futuristic K-Planes, Shuttles, and SSTOs
 		minVersion = 2.0.0
-		agent = SSI Aerospace
+		agent = KPlanes_SSI
 		tip = Imagining futuristic space planes that Buck Rogers would fly...
 		sortKey = a04
 	}
@@ -59,7 +59,7 @@ CONTRACT_GROUP
 		title = Scaling adjustments
 		requiredValue = false
 
-		Scale = HomeWorld().Radius / 6000.0
+		Scale = HomeWorld().Radius() / 600000.0
 		PI = 3.141592653589793238
 	}
 
@@ -69,12 +69,12 @@ CONTRACT_GROUP
 		title = Reward scaling
 		requiredValue = false
 
-		RewardAdvanceFunds	= 1000.0	* @KPlanes:Scale
-		RewardFunds		= 5000.0	* @KPlanes:Scale
-		RewardReputation	= 5.0		* @KPlanes:Scale
-		RewardScience		= 5.0		* @KPlanes:Scale
-		FailureFunds		= 4000.0	* @KPlanes:Scale
-		FailureReputation	= 5.0		* @KPlanes:Scale
+		RewardAdvanceFunds	= 1000.0	* @Scale
+		RewardFunds		= 5000.0	* @Scale
+		RewardReputation	= 5.0		* @Scale
+		RewardScience		= 5.0		* @Scale
+		FailureFunds		= 4000.0	* @Scale
+		FailureReputation	= 5.0		* @Scale
 	}
 
 	DATA
@@ -88,15 +88,15 @@ CONTRACT_GROUP
 		SpaceHigh		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0)
 
 		// This is all rough, not based on reality
-		TroposphereLow		= Round(@KPlanes:FlyingHigh * 0.33333)
-		TroposphereHigh		= Round(@KPlanes:FlyingHigh * 0.5)
-		StratosphereLow		= @KPlanes:FlyingHigh
-		StratosphereHigh	= Round((@KPlanes:SpaceLow - @KPlanes:FlyingHigh) * 0.3333) + @KPlanes:FlyingHigh
-		MesosphereLow		= Round(((@KPlanes:SpaceLow - @KPlanes:FlyingHigh) * 0.3846) + @KPlanes:FlyingHigh
-		MesosphereHigh		= Round(((@KPlanes:SpaceLow - @KPlanes:FlyingHigh) * 0.6666) + @KPlanes:FlyingHigh
+		TroposphereLow		= Round(@FlyingHigh * 0.3333)
+		TroposphereHigh		= Round(@FlyingHigh * 0.5)
+		StratosphereLow		= @FlyingHigh
+		StratosphereHigh	= Round((@SpaceLow - @FlyingHigh) * 0.3333) + @FlyingHigh
+		MesosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.5000) + @FlyingHigh
+		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.6666) + @FlyingHigh
 
 		// Orbital heights, GEO has to be computed from an orbit generator
-		SpaceLEO		= Round(SpaceLow * 1.2)
+		SpaceLEO		= Round(@SpaceLow * 1.2)
 	}
 
 	DATA
@@ -114,6 +114,6 @@ CONTRACT_GROUP
 		title = Distance scaling
 		requiredValue = false
 
-		Circum			= 2.0 * @KPlanes:PI * HomeWorld().Radius	// (m) Homeworld circumference
+		Circum			= 2.0 * @PI * HomeWorld().Radius()	// (m) Homeworld circumference
 	}
 }
