Print and prettify altitudes correctly from table.

--- a/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
@@ -31,6 +31,13 @@ CONTRACT_TYPE
 
 	}
 
+	DATA
+	{
+		type = string
+		AltMin = Round(2.5 * 1000.0)
+		PrettyAltMin = @AltMin.Print()m
+	}
+
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
@@ -205,7 +212,7 @@ CONTRACT_TYPE
 	{
 		name = VesselParameterGroup
 		type = VesselParameterGroup
-		title = fly up to 2,500m
+		title = fly up to @/PrettyAltMin
 
 		vessel = @/craft
 
@@ -216,7 +223,7 @@ CONTRACT_TYPE
 
 			targetBody = Kerbin
 			situation = FLYING
-			minAltitude = 2500
+			minAltitude = @/AltMin
 
 			disableOnStateChange = true
 			hideChildren = true
