Use localization now.

--- a/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
@@ -41,17 +41,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
-	title = Fly an airplane to 2,500m.
+	title = #autoLOC_KPlanes_Start_002_FlyingHigher_title
 	group = KPlanes_Start
 	agent = KPlanes_Wright
 
-	description = Taking off and landing is easy. Flying up to 2,500m with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
+	description = #autoLOC_KPlanes_Start_002_FlyingHigher_description
 
-	synopsis = Simply launch an airplane from the runway, fly up to 2,500m, then land back at the runway safely.
+	synopsis = #autoLOC_KPlanes_Start_002_FlyingHigher_synopsis
 
-	notes = Enjoy the view!
+	notes = #autoLOC_KPlanes_Start_002_FlyingHigher_notes
 
-	completedMessage = Another historic flight completed!&br;&br;Your pilot is starting to showing some amazing skill with that last landing.
+	completedMessage = #autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage
 
 //Contract Limits
    	maxCompletions = 1
