--- a/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/001-FirstFlight.cfg
@@ -95,17 +95,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-001-FirstFlight
-	title = Build and fly your first airplane!
+	title = #autoLOC_KPlanes_Start_001_FirstFlight_title
 	group = KPlanes_Start
 	agent = KPlanes_Wright
 
-	description = Thanks to your organization's research efforts, we have finally developed an air-breathing engine that should be light enough to mount to a glider, making controlled powered air flight possible!&br;&br;Previous attempts to use solid rockets for gliders often ended in disaster and a scarcity of willing volunteers.  Wright Aeronautical is asking you to partner with them to build and test a flying machine using an air breathing engine. Your flying machine must have wings so it can control its flight, and must be able to land safely.&br;&br;This is a whole new frontier where many have failed before, so there isn't any investment money available to offer you at the moment. Wright Aeronautical is willing to cover labor costs, snacks, and notify the press, however, you will need to put forth your own funds to acquire the parts necessary for this project. If you succeed, your pilot will acquire both valuable flying skills and your organization will become known worldwide.
+	description = #autoLOC_KPlanes_Start_001_FirstFlight_description
 
-	synopsis = It's time to construct a flying machine - one that will prove to the world that controlled powered air flight is indeed possible!
+	synopsis = #autoLOC_KPlanes_Start_001_FirstFlight_synopsis
 
-	notes = Wilbur and Orville both wanted to go, but the coin they flipped landed on its side - hence the reason why they're also asking you to put up a volunteer to pilot the contraption.
+	notes = #autoLOC_KPlanes_Start_001_FirstFlight_notes
 
-	completedMessage = Congratulations! The flight was a success!&br;&br;The historic flight was thankfully caught on camera by the lone press agent who responded to the press invitation. His article about your flight has been read by millions, and you have now spurred the imaginations of Kerbals everywhere.
+	completedMessage = #autoLOC_KPlanes_Start_001_FirstFlight_completedMessage
 
 //Contract Limits
    	maxCompletions = 1
