More altitude bug fixes and a slight rebalance.

--- a/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Start/002-FlyingHigher.cfg
@@ -33,9 +33,16 @@ CONTRACT_TYPE
 
 	DATA
 	{
-		type = string
+		type = double
 		AltMin = Round(2.5 * 1000.0)
-		PrettyAltMin = @AltMin.Print()m
+            title = Minimum Altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMin = "@/AltMin.Print() m"
+            title = Minimum Altitude
 	}
 
 //CONTRACT DESCRIPTION
