--- a/GameData/ContractPacks/KPlanes/Agencies.cfg
+++ b/GameData/ContractPacks/KPlanes/Agencies.cfg
@@ -5,9 +5,8 @@
 
 // For contracts: Earth equivalent 1900 to 1915.
 // Style: First powered flights.
-AGENT
+&AGENT[Wright Aeronautical]:LAST[KPlanes]
 {
-	name = KPlanes_Wright
 	title = Wright Aeronautical
 	description = Offering airplane rides to the public, and provides air show stunt contracts.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/WrightAeronautical
@@ -17,11 +16,10 @@ AGENT
 
 // For contracts: Earth equivalent 1915 to 1958.
 // Style: Propeller and jet planes, early K-Planes.
-AGENT
+&AGENT[KACA]:LAST[KPlanes]
 {
-	name = KPlanes_KACA
 	title = KACA
-	description = KACA stands for Kerbal Advistory Committee for Aeronautics. It is an early government foundation set up to undertake, promote and institutionalize aeronautical research. The name was unfortunately not reviewed by anybody sensible.
+	description = KACA stands for Kerbal Advistory Committee for Aeronautics. It is an early government foundation set up to undertake, promote and institutionalize aeronautical research. The acronym was unfortunately not noticed by anybody sensible.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/KACA
 	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/KACA
 	mentality = NoRandomContractMentality
@@ -29,20 +27,20 @@ AGENT
 
 // For contracts: Earth equivalent 1958 to present day.
 // Style: Propeller and jet planes, X-1 thru X-13 (1946 to 1955)
-AGENT
+&AGENT[KASA]:LAST[KPlanes]
 {
-	name = KPlanes_KASA
+	name = KASA
 	title = KASA
-	description = KASA stands for Kerbal Aeronatuics and Space Administration. It is the government agency responsible for civil space, aeronautics research and development. Replaced KACA as soon as somebody sensible noticed the terrible name. 
+	description = KASA stands for Kerbal Aeronatuics and Space Administration. It is the government agency responsible for civil space, aeronautics research and development. Replaced KACA as soon as somebody sensible noticed the terrible acronym. 
 	logoURL = ContractPacks/KPlanes/Assets/Flags/KASA
 	logoScaledURL = ContractPacks/KPlanes/Assets/Flags/KASA
 	mentality = NoRandomContractMentality
 }
 
 // For contracts: Earth equivalent 1990s to far future.
-AGENT
+&AGENT[SSI Aerospace]:LAST[KPlanes]
 {
-	name = KPlanes_SSI
+	name = SSI Aerospace
 	title = SSI Aerospace
 	description = An engineering cooperative focused on developing and testing aerospace assets.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/SSI
