--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -8,17 +8,18 @@ CONTRACT_GROUP
 	name = KPlanes
 	displayName = K-Planes
 	minVersion = 2.0.0
-	agent = KPlanes_SSI
+	agent = SSI Aerospace
 
-	maxCompletions = 1
-	maxSimultaneous = 3		// Allows Speed, Height and Distance in one go, but not too crazy.
+// TODO: Undo once testing done?
+//	maxCompletions = 1
+//	maxSimultaneous = 3		// Allows Speed, Height and Distance in one go, but not too crazy.
 
 	CONTRACT_GROUP
 	{
 		name = KPlanes_Start
 		displayName = Basic Plane Development
 		minVersion = 2.0.0
-		agent = KPlanes_Wright
+		agent = Wright Aeronautical
 		tip = Building K-Planes...
 		sortKey = a01
 	}
@@ -28,7 +29,7 @@ CONTRACT_GROUP
 		name = KPlanes_Early
 		displayName = Early K-Plane Development
 		minVersion = 2.0.0
-		agent = KPlanes_KACA
+		agent = KACA
 		tip = Launching K-Plane from another plane...
 		sortKey = a02
 	}
@@ -38,7 +39,7 @@ CONTRACT_GROUP
 		name = KPlanes_Modern
 		displayName = Modern K-Planes and Shuttles, early SSTOs
 		minVersion = 2.0.0
-		agent = KPlanes_KASA
+		agent = KASA
 		tip = Adding more wings to K-Planes...
 		sortKey = a03
 	}	
@@ -48,7 +49,7 @@ CONTRACT_GROUP
 		name = KPlanes_Future
 		displayName = Futuristic K-Planes, Shuttles, and SSTOs
 		minVersion = 2.0.0
-		agent = KPlanes_SSI
+		agent = SSI Aerospace
 		tip = Imagining futuristic space planes that Buck Rogers would fly...
 		sortKey = a04
 	}
