No expiry or limits for now.

--- a/GameData/ContractPacks/KPlanes/Agencies.cfg
+++ b/GameData/ContractPacks/KPlanes/Agencies.cfg
@@ -5,8 +5,9 @@
 
 // For contracts: Earth equivalent 1900 to 1915.
 // Style: First powered flights.
-&AGENT[Wright Aeronautical]:LAST[KPlanes]
+AGENT:NEEDS[!ContractPacks/GAP,!ContractPacks/GAP-for-JNSQ]
 {
+	name = Wright Aeronautical
 	title = Wright Aeronautical
 	description = Offering airplane rides to the public, and provides air show stunt contracts.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/WrightAeronautical
@@ -16,8 +17,9 @@
 
 // For contracts: Earth equivalent 1915 to 1958.
 // Style: Propeller and jet planes, early K-Planes.
-&AGENT[KACA]:LAST[KPlanes]
+AGENT
 {
+	name = KACA
 	title = KACA
 	description = KACA stands for Kerbal Advistory Committee for Aeronautics. It is an early government foundation set up to undertake, promote and institutionalize aeronautical research. The acronym was unfortunately not noticed by anybody sensible.
 	logoURL = ContractPacks/KPlanes/Assets/Flags/KACA
@@ -27,7 +29,7 @@
 
 // For contracts: Earth equivalent 1958 to present day.
 // Style: Propeller and jet planes, X-1 thru X-13 (1946 to 1955)
-&AGENT[KASA]:LAST[KPlanes]
+AGENT
 {
 	name = KASA
 	title = KASA
@@ -38,7 +40,7 @@
 }
 
 // For contracts: Earth equivalent 1990s to far future.
-&AGENT[SSI Aerospace]:LAST[KPlanes]
+AGENT:NEEDS[!ContractPacks/GAP,!ContractPacks/GAP-for-JNSQ]
 {
 	name = SSI Aerospace
 	title = SSI Aerospace
