Refactor code ready for next tasks.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -97,7 +97,7 @@ CONTRACT_TYPE
 	name = Start-001-FirstFlight
 	title = #autoLOC_KPlanes_Start_001_FirstFlight_title
 	group = KPlanes_Start
-	agent = KPlanes_Wright
+	agent = Wright Aeronautical
 
 	description = #autoLOC_KPlanes_Start_001_FirstFlight_description
 
