--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -50,7 +50,7 @@ CONTRACT_TYPE
 	name = Start-002-FlyingHigher
 	title = #autoLOC_KPlanes_Start_002_FlyingHigher_title
 	group = KPlanes_Start
-	agent = KPlanes_Wright
+	agent = Wright Aeronautical
 
 	description = #autoLOC_KPlanes_Start_002_FlyingHigher_description
 
