Improve pretty printing.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -35,14 +35,28 @@ CONTRACT_TYPE
 	{
 		type = double
 		AltMin = Round(2.5 * 1000.0)
-		title = Minimum Altitude
+		title = Minimum altitude
 	}
 
 	DATA
 	{
 		type = string
-		PrettyAltMin = "@/AltMin.Print() m"
-            title = Minimum Altitude
+		DescAltMin = 
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMin = "Round(@/AltMin / 1000.0).Print() km"
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltRange = "altitude of at least @/PrettyAltMin@/DescAltMin"
+		title = Range for altitude 
 	}
 
 //CONTRACT DESCRIPTION
