Move pretty range into data and localize.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -34,14 +34,14 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = double
-		AltMin = Round(2.5 * 1000.0)
+		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
 		title = Minimum altitude
 	}
 
 	DATA
 	{
 		type = string
-		DescAltMin = 
+		DescAltMin = (Troposphere Low)
 		title = Minimum altitude
 	}
 
@@ -62,13 +62,13 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
-	title = #autoLOC_KPlanes_Start_002_FlyingHigher_title
+	title = "#autoLOC_KPlanes_Start_002_FlyingHigher_title".Format(@/PrettyAltRange)
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = #autoLOC_KPlanes_Start_002_FlyingHigher_description
+	description = "#autoLOC_KPlanes_Start_002_FlyingHigher_description".Format(@/PrettyAltRange)
 
-	synopsis = #autoLOC_KPlanes_Start_002_FlyingHigher_synopsis
+	synopsis = "#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis".Format(@/PrettyAltRange)
 
 	notes = #autoLOC_KPlanes_Start_002_FlyingHigher_notes
 
