--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -95,13 +95,13 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-001-FirstFlight
-	title = #autoLOC_KPlanes_Start_001_FirstFlight_title
+	title = "#autoLOC_KPlanes_Start_001_FirstFlight_title".Format()
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = #autoLOC_KPlanes_Start_001_FirstFlight_description
+	description = "#autoLOC_KPlanes_Start_001_FirstFlight_description".Format()
 
-	synopsis = #autoLOC_KPlanes_Start_001_FirstFlight_synopsis
+	synopsis = "#autoLOC_KPlanes_Start_001_FirstFlight_synopsis".Format()
 
 	notes = #autoLOC_KPlanes_Start_001_FirstFlight_notes
 
