--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -8,9 +8,9 @@ Localization
 		#autoLOC_KPlanes_Start_001_FirstFlight_notes = Wilbur and Orville both wanted to go, but the coin they flipped landed on its side - hence the reason why they're also asking you to put up a volunteer to pilot the contraption.
 		#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage = Congratulations! The flight was a success!&br;&br;The historic flight was thankfully caught on camera by the lone press agent who responded to the press invitation. His article about your flight has been read by millions, and you have now spurred the imaginations of Kerbals everywhere.
 
-		#autoLOC_KPlanes_Start_002_FlyingHigher_title = Fly an airplane to 2,500m.
-		#autoLOC_KPlanes_Start_002_FlyingHigher_description = Taking off and landing is easy. Flying up to 2,500m with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
-		#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis = Simply launch an airplane from the runway, fly up to 2,500m, then land back at the runway safely.
+		#autoLOC_KPlanes_Start_002_FlyingHigher_title = Fly an airplane to <<1>>.
+		#autoLOC_KPlanes_Start_002_FlyingHigher_description = Taking off and landing is easy. Flying <<1>> with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
+		#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis = Simply launch an airplane from the runway, fly <<1>>, then land back at the runway safely.
 		#autoLOC_KPlanes_Start_002_FlyingHigher_notes = Enjoy the view!
 		#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage = Another historic flight completed!&br;&br;Your pilot is starting to showing some amazing skill with that last landing.
 	}
