Try fixing the altitude localization. Complex this.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -95,13 +95,13 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-001-FirstFlight
-	title = "#autoLOC_KPlanes_Start_001_FirstFlight_title".Format()
+	title = string.Format("#autoLOC_KPlanes_Start_001_FirstFlight_title")
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = "#autoLOC_KPlanes_Start_001_FirstFlight_description".Format()
+	description = string.Format("#autoLOC_KPlanes_Start_001_FirstFlight_description")
 
-	synopsis = "#autoLOC_KPlanes_Start_001_FirstFlight_synopsis".Format()
+	synopsis = string.Format("#autoLOC_KPlanes_Start_001_FirstFlight_synopsis")
 
 	notes = #autoLOC_KPlanes_Start_001_FirstFlight_notes
 
