--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -41,7 +41,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		DescAltMin = (Troposphere Low)
+		DescAltMin =  (Troposphere Low)
 		title = Minimum altitude
 	}
 
@@ -62,13 +62,13 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
-	title = "#autoLOC_KPlanes_Start_002_FlyingHigher_title".Format(@/PrettyAltRange)
+	title = string.Format("#autoLOC_KPlanes_Start_002_FlyingHigher_title", "@/PrettyAltRange")
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = "#autoLOC_KPlanes_Start_002_FlyingHigher_description".Format(@/PrettyAltRange)
+	description = string.Format("#autoLOC_KPlanes_Start_002_FlyingHigher_description", "@/PrettyAltRange")
 
-	synopsis = "#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis".Format(@/PrettyAltRange)
+	synopsis = string.Format("#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis", "@/PrettyAltRange")
 
 	notes = #autoLOC_KPlanes_Start_002_FlyingHigher_notes
 
