More bugfixing, mostly because I dont get CC expressions yet.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -35,44 +35,45 @@ CONTRACT_TYPE
 	{
 		type = double
 		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
+		ScaledAltMin = Round(@/AltMin / 1000.0)
 		title = Minimum altitude
 	}
 
 	DATA
 	{
 		type = string
-		DescAltMin =  (Troposphere Low)
+		DescAltMin = " (Troposphere Low)"
 		title = Minimum altitude
 	}
 
 	DATA
 	{
 		type = string
-		PrettyAltMin = "Round(@/AltMin / 1000.0).Print() km"
+		PrettyAltMin = @/ScaledAltMin.Print() km
 		title = Minimum altitude
 	}
 
 	DATA
 	{
 		type = string
-		PrettyAltRange = "altitude of at least @/PrettyAltMin@/DescAltMin"
+		PrettyAltRange = altitude of at least @/PrettyAltMin@/DescAltMin
 		title = Range for altitude 
 	}
 
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
-	title = string.Format("#autoLOC_KPlanes_Start_002_FlyingHigher_title", "@/PrettyAltRange")
+	title = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_title", "@/PrettyAltRange")
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = string.Format("#autoLOC_KPlanes_Start_002_FlyingHigher_description", "@/PrettyAltRange")
+	description = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_description", "@/PrettyAltRange")
 
-	synopsis = string.Format("#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis", "@/PrettyAltRange")
+	synopsis = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis", "@/PrettyAltRange")
 
-	notes = #autoLOC_KPlanes_Start_002_FlyingHigher_notes
+	notes = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_notes", "@/PrettyAltRange")
 
-	completedMessage = #autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage
+	completedMessage = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage", "@/PrettyAltRange")
 
 //Contract Limits
    	maxCompletions = 1
