--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -95,17 +95,17 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-001-FirstFlight
-	title = string.Format("#autoLOC_KPlanes_Start_001_FirstFlight_title")
+	title = Format("#autoLOC_KPlanes_Start_001_FirstFlight_title")
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = string.Format("#autoLOC_KPlanes_Start_001_FirstFlight_description")
+	description = Format("#autoLOC_KPlanes_Start_001_FirstFlight_description")
 
-	synopsis = string.Format("#autoLOC_KPlanes_Start_001_FirstFlight_synopsis")
+	synopsis = Format("#autoLOC_KPlanes_Start_001_FirstFlight_synopsis")
 
-	notes = #autoLOC_KPlanes_Start_001_FirstFlight_notes
+	notes = Format("#autoLOC_KPlanes_Start_001_FirstFlight_notes")
 
-	completedMessage = #autoLOC_KPlanes_Start_001_FirstFlight_completedMessage
+	completedMessage = Format("#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage")
 
 //Contract Limits
    	maxCompletions = 1
