--- a/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/001-FirstFlight.cfg
@@ -95,21 +95,21 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-001-FirstFlight
-	title = Format("#autoLOC_KPlanes_Start_001_FirstFlight_title")
+	title = Format("#autoLOC_KPlanes_Start_001_FirstFlight_title", [ "" ] )
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_001_FirstFlight_description")
+	description = Format("#autoLOC_KPlanes_Start_001_FirstFlight_description", [ "" ] )
 
-	synopsis = Format("#autoLOC_KPlanes_Start_001_FirstFlight_synopsis")
+	synopsis = Format("#autoLOC_KPlanes_Start_001_FirstFlight_synopsis", [ "" ] )
 
-	notes = Format("#autoLOC_KPlanes_Start_001_FirstFlight_notes")
+	notes = Format("#autoLOC_KPlanes_Start_001_FirstFlight_notes", [ "" ] )
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage")
+	completedMessage = Format("#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage", [ "" ] )
 
 //Contract Limits
-   	maxCompletions = 1
-   	maxSimultaneous = 1
+	maxCompletions = 1
+	maxSimultaneous = 1
 //	weight = 100.0
 
 	autoAccept = false
@@ -122,17 +122,17 @@ CONTRACT_TYPE
 
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = HomeWorld()
+	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 2 * @KPlanes:RewardAdvanceFunds
-  	rewardFunds = 2 * @KPlanes:RewardFunds
-  	rewardReputation = 2 * @KPlanes:RewardReputation
- 	rewardScience = 2 * @KPlanes:RewardScience
+	advanceFunds = 2 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 2 * @KPlanes:RewardFunds
+	rewardReputation = 2 * @KPlanes:RewardReputation
+	rewardScience = 2 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 2 * @KPlanes:FailureFunds
- 	failureReputation = 2 * @KPlanes:FailureReputation
+	failureFunds = 2 * @KPlanes:FailureFunds
+	failureReputation = 2 * @KPlanes:FailureReputation
 
 
 //BEHAVIOURS TO DO WHEN CREATING CONTRACT
