--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -49,7 +49,7 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		PrettyAltMin = @/ScaledAltMin.Print() km
+		PrettyAltMin = "@/ScaledAltMin.Print() km"
 		title = Minimum altitude
 	}
 
@@ -63,21 +63,21 @@ CONTRACT_TYPE
 //CONTRACT DESCRIPTION
 
 	name = Start-002-FlyingHigher
-	title = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_title", "@/PrettyAltRange")
+	title = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_title", [ "@/PrettyAltRange" ] )
 	group = KPlanes_Start
 	agent = Wright Aeronautical
 
-	description = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_description", "@/PrettyAltRange")
+	description = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_description", [ "@/PrettyAltRange" ] )
 
-	synopsis = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis", "@/PrettyAltRange")
+	synopsis = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis", [ "@/PrettyAltRange" ] )
 
-	notes = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_notes", "@/PrettyAltRange")
+	notes = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_notes", [ "@/PrettyAltRange" ] )
 
-	completedMessage = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage", "@/PrettyAltRange")
+	completedMessage = Format("#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage", [ "@/PrettyAltRange" ] )
 
 //Contract Limits
-   	maxCompletions = 1
-   	maxSimultaneous = 1
+	maxCompletions = 1
+	maxSimultaneous = 1
 //	weight = 100.0
 
 	autoAccept = false
@@ -90,17 +90,17 @@ CONTRACT_TYPE
 
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = HomeWorld()
+	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 1 * @KPlanes:RewardAdvanceFunds
-  	rewardFunds = 1 * @KPlanes:RewardFunds
-  	rewardReputation = 1 * @KPlanes:RewardReputation
- 	rewardScience = 1 * @KPlanes:RewardScience
+	advanceFunds = 1 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 1 * @KPlanes:RewardFunds
+	rewardReputation = 1 * @KPlanes:RewardReputation
+	rewardScience = 1 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 1 * @KPlanes:FailureFunds
- 	failureReputation = 1 * @KPlanes:FailureReputation
+	failureFunds = 1 * @KPlanes:FailureFunds
+	failureReputation = 1 * @KPlanes:FailureReputation
 
 
 //PARAMETERS FOR CONTRACT COMPLETION
