Better scaling of altitude, distance, speed.

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -70,12 +70,12 @@ CONTRACT_GROUP
 		title = Reward scaling
 		requiredValue = false
 
-		RewardAdvanceFunds	= 1000.0	* @Scale
-		RewardFunds		= 5000.0	* @Scale
-		RewardReputation	= 2.0		* @Scale
-		RewardScience		= 1.0		* @Scale
-		FailureFunds		= 4000.0	* @Scale
-		FailureReputation	= 1.0		* @Scale
+		RewardAdvanceFunds	=  200.0	* @Scale
+		RewardFunds		= 1000.0	* @Scale
+		RewardReputation	=    1.0	* @Scale
+		RewardScience		=    1.0	* @Scale
+		FailureFunds		=  800.0	* @Scale
+		FailureReputation	=    1.0	* @Scale
 	}
 
 	DATA
@@ -84,20 +84,27 @@ CONTRACT_GROUP
 		title = Altitude scaling
 		requiredValue = false
 
+		// Stock Values
 		FlyingHigh		= Round(HomeWorld().FlyingAltitudeThreshold() / 1000.0)
 		SpaceLow		= Round(HomeWorld().AtmosphereAltitude() / 1000.0)
 		SpaceHigh		= Round(HomeWorld().SpaceAltitudeThreshold() / 1000.0)
 
+		// Identifiers
 		// This is all rough, not based on reality
-		TroposphereLow		= Round(@FlyingHigh * 0.3333)
-		TroposphereHigh		= Round(@FlyingHigh * 0.5)
-		StratosphereLow		= @FlyingHigh
-		StratosphereHigh	= Round((@SpaceLow - @FlyingHigh) * 0.3333) + @FlyingHigh
-		MesosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.5000) + @FlyingHigh
-		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.6666) + @FlyingHigh
+		TroposphereLow		= Round(@FlyingHigh * 0.1000)
+		TroposphereHigh		= Round(@FlyingHigh * 0.1700)
+		StratosphereLow		= Round(@FlyingHigh * 0.2400)
+		StratosphereHigh	= Round(@FlyingHigh * 0.5000)
+		
+		MesosphereLow		= @FlyingHigh
+		MesosphereHigh		= Round((@SpaceLow - @FlyingHigh) * 0.3500) + @FlyingHigh
+		ThermosphereLow		= Round((@SpaceLow - @FlyingHigh) * 0.7000) + @FlyingHigh
+		ThermosphereHigh	= Round((@SpaceLow - @FlyingHigh) * 0.8500) + @FlyingHigh		
 
-		// Orbital heights, GEO has to be computed from an orbit generator
-		SpaceLEO		= Round(@SpaceLow * 1.2)
+		KarmlanLine		= @SpaceLow
+		SpaceLEO		= Round((@SpaceHigh - @SpaceLow) * 0.1265) + @SpaceLow
+		SpaceMEO		= @SpaceHigh
+		// SpaceGEO		= <<Compute using Orbit Generator>>
 	}
 
 	DATA
@@ -107,6 +114,13 @@ CONTRACT_GROUP
 		requiredValue = false
 
 		Mach			= 343		// (m/s) Speed of sound at sea level, plus a bit
+
+		// Identifiers
+		Mach1			= @Mach * 1.0
+		Mach2			= @Mach * 2.0
+		Mach3			= @Mach * 3.0
+		Mach4			= @Mach * 4.0
+		Mach5			= @Mach * 5.0
 	}
 
 	DATA
@@ -115,6 +129,13 @@ CONTRACT_GROUP
 		title = Distance scaling
 		requiredValue = false
 
-		Circum			= 2.0 * @PI * HomeWorld().Radius()	// (m) Homeworld circumference
+		Circumference		= 2.0 * @PI * HomeWorld().Radius()	// (m) Homeworld circumference
+
+		// Identifiers
+		ShortHop		= Round(@Circumference / 15.0, 100.0)
+		Domestic		= Round(@Circumference / 7.0, 100.0)
+		Continental		= Round(@Circumference / 5.0, 100.0)
+		Intercontinental	= Round(@Circumference / 3.0, 250.0)
+		Polar			= Round(@Circumference / 2.0)
 	}
 }
