Change reward scaling to sqrt(scale).

--- a/GameData/ContractPacks/KPlanes/Groups.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups.cfg
@@ -70,12 +70,16 @@ CONTRACT_GROUP
 		title = Reward scaling
 		requiredValue = false
 
-		RewardAdvanceFunds	=  200.0	* @Scale
-		RewardFunds		= 1000.0	* @Scale
-		RewardReputation	=    1.0	* @Scale
-		RewardScience		=    1.0	* @Scale
-		FailureFunds		=  800.0	* @Scale
-		FailureReputation	=    1.0	* @Scale
+		// Reward scale is sqrt(scale). Stock = 1.0, KSRSS = 1.6, RSS = 3.3
+		RewardScale		= Round(Pow(@Scale, 0.5), 0.1)
+
+		// Only funds are scaled to planet, as contracts are mostly about money.
+		RewardAdvanceFunds	=  200.0	* @RewardScale
+		RewardFunds		= 1000.0	* @RewardScale
+		RewardReputation	=    1.0
+		RewardScience		=    1.0
+		FailureFunds		=  800.0	* @RewardScale
+		FailureReputation	=    1.0
 	}
 
 	DATA
