Added one speed contract.

--- a/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/002-FlyingHigher.cfg
@@ -243,7 +243,7 @@ CONTRACT_TYPE
 			name = ReachState
 			type = ReachState
 
-			targetBody = Kerbin
+			targetBody = HomeWorld()
 			situation = FLYING
 			minAltitude = @/AltMin
 
@@ -255,7 +255,7 @@ CONTRACT_TYPE
 
 		completeInSequence = true
 		disableOnStateChange = true
-		hideChildren = true	
+		hideChildren = true
 
 	}
 
@@ -285,7 +285,7 @@ CONTRACT_TYPE
 					name = ReachState
 					type = ReachState
 
-					targetBody = Kerbin
+					targetBody = HomeWorld()
 					biome = Runway
 					situation = LANDED
 					maxSpeed = 0.0
@@ -313,7 +313,7 @@ CONTRACT_TYPE
 					name = ReachState
 					type = ReachState
 
-					targetBody = Kerbin
+					targetBody = HomeWorld()
 					biome = SPH
 					situation = LANDED
 					maxSpeed = 0.0
