--- a/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
+++ b/GameData/ContractPacks/KPlanes/Groups/Start/003-FlyingFaster.cfg
@@ -1,9 +1,11 @@
-//Wright-Speed100 - Wright Aeronautical: Achieve an airspeed of 100 m/s
+// -*- conf-javaprop -*-
+//
+// Copied and modified from GAP/Wright-FirstFlight.cfg
 
 CONTRACT_TYPE
 {
 
-	sortKey = a5
+	sortKey = a003
 
 //REQUIREMENTS FOR CONTRACT TO APPEAR
 
@@ -11,12 +13,12 @@ CONTRACT_TYPE
 	{
 		name = CompleteContract
 		type = CompleteContract
-		
-		contractType = Wright-2500m
+
+		contractType = Start-001-FirstFlight
 		minCount = 1
-		
+
 	}
-	
+
 
 //DATA NODES TO PROCESS FOR CONTRACT USE
 
@@ -24,56 +26,127 @@ CONTRACT_TYPE
 	DATA
 	{
 		type = string
-		
-		craft = GAPcraftWrightSpeed100
-		
+
+		craft = KPlanesCraft_Start_003
+
 	}
-	
+
+	DATA
+	{
+		type = double
+		AltMin = Round(@KPlanes:TroposphereLow * 1000.0)
+		ScaledAltMin = Round(@/AltMin / 1000.0)
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		DescAltMin = " (Troposphere Low)"
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMin = "@/ScaledAltMin.Print() km"
+		title = Minimum altitude
+	}
+
+	DATA
+	{
+		type = double
+		AltMax = Round(@KPlanes:TroposphereHigh * 1000.0)
+		ScaledAltMax = Round(@/AltMax / 1000.0)
+		title = Maximum altitude
+	}
+
+	DATA
+	{
+		type = string
+		DescAltMax = " (Troposphere High)"
+		title = Maximum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltMax = "@/ScaledAltMax.Print() km"
+		title = Maximum altitude
+	}
+
+	DATA
+	{
+		type = string
+		PrettyAltRange = altitude between @/PrettyAltMin@/DescAltMin and @/PrettyAltMax@/DescAltMax
+		title = Range for altitude 
+	}
+
+	DATA
+	{
+		type = double
+		Speed = Round(100 * 1.0)
+		ScaledSpeed = Round(@/Speed / 1.0)
+		title = Speed
+	}
+
+	DATA
+	{
+		type = string
+		DescSpeed = ""
+		title = Speed
+	}
+
+	DATA
+	{
+		type = string
+		PrettySpeed = "@/ScaledSpeed.Print() m/s"
+		title = Speed
+	}
 
 //CONTRACT DESCRIPTION
 
-//Contract Descriptions
-	name = Wright-Speed100
-	title = Achieve an airspeed of 100 m/s
-	group = GAP
+	name = Start-003-FlyingFaster
+	title = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_title", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+	group = KPlanes_Start
 	agent = Wright Aeronautical
-	
-	description = Kurtis Kerman, a friend of Wilbur Kerman, suggests that an airplane, if designed properly, should be able to exceed speeds faster than the fastest ground vehicles, and without having to dive toward the ground to do it. Wright Aeronautical is interested in helping to prove that this is possible (we're hoping you know which "this" we're referring to). They want you to take an air-breathing airplane above 2,500m but below 5,000m and see if you can exceed 100 m/s safely in level controlled flight, and thus break the current manned vehicle speed record.
-	
-	synopsis = Simply launch an airplane from the runway, fly between 2,500m and 5,000m, exceed 220 m/s in level flight for 5 seconds, and then land back at KSC safely.
-	
-	notes = Let's get flying! 
-	
-	completedMessage = Congratulations, you have set a new air speed record of 100 m/s!&br;&br;You have justified Kurtis Kerman's theories on high speed air flight, and brought another measure of fame and reputation to Wright Aeronautical. Sponsors are starting to ask how they can support the new air speed frontier. Check in with Mission Control to see if Wright Aeronautical has another contract waiting for you!
+
+	description = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_description", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+
+	synopsis = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_synopsis", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+
+	notes = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_notes", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
+
+	completedMessage = Format("#autoLOC_KPlanes_Start_003_FlyingFaster_completedMessage", [ "@/PrettyAltRange", "@/PrettySpeed" ] )
 
 //Contract Limits
-  	maxCompletions = 1
-   	maxSimultaneous = 1
-//	weight = 10.0
+	maxCompletions = 1
+	maxSimultaneous = 1
+//	weight = 100.0
 
 	autoAccept = false
 	declinable = true
 	cancellable = true
-	
-	minExpiry = 7.0
-	maxExpiry = 7.0
+
+	minExpiry = 0.0
+	maxExpiry = 0.0
 	deadline = 0
- 
+
 //Contract Reward Modifiers
 	prestige = Trivial
-   	targetBody = Kerbin
+	targetBody = HomeWorld()
 
 //Contract Rewards
-  	advanceFunds = 2000
-  	rewardFunds = 8000.0
-  	rewardReputation = 5.0
- 	rewardScience = 3.0
+	advanceFunds = 8 * @KPlanes:RewardAdvanceFunds
+	rewardFunds = 8 * @KPlanes:RewardFunds
+	rewardReputation = 5 * @KPlanes:RewardReputation
+	rewardScience = 3 * @KPlanes:RewardScience
 
 //Contract Penalties
-  	failureFunds = 4000.0
- 	failureReputation = 5.0
-	
-	
+	failureFunds = 8 * @KPlanes:FailureFunds
+	failureReputation = 5 * @KPlanes:FailureReputation
+
+
 //PARAMETERS FOR CONTRACT COMPLETION
 
 //Craft definition
@@ -82,7 +155,7 @@ CONTRACT_TYPE
 		name = VesselParameterGroup
 		type = VesselParameterGroup
 		title = Your aircraft must
-		
+
 		define = @/craft
 		dissassociateVesselsOnContractCompletion = true
 
@@ -91,10 +164,10 @@ CONTRACT_TYPE
 			name = HasCrew
 			type = HasCrew
 			title = have a certified pilot
-			
+
 			trait = Pilot
 			minCrew = 1
-		
+
 			disableOnStateChange = false
 			hideChildren = true
 
@@ -105,20 +178,20 @@ CONTRACT_TYPE
 			name = PartValidation
 			type = PartValidation
 			title = have wings
-			
+
 			category = Aero
-			
+
 			disableOnStateChange = false
 			hideChildren = true
 
 		}
-	
+
 		PARAMETER
 		{
 			name = All
 			type = All
 			title = have an air breathing engine only
-			
+
 			PARAMETER
 			{
 				name = PartValidation
@@ -130,16 +203,16 @@ CONTRACT_TYPE
 					MODULE
 					{
 						EngineType = SolidBooster
-						
+
 					}
-					
+
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-			
+
 			}
-			
+
 			PARAMETER
 			{
 				name = PartValidation
@@ -151,50 +224,50 @@ CONTRACT_TYPE
 					MODULE
 					{
 						EngineType = LiquidFuel
-						
+
 					}
-					
+
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-			
+
 			}
-			
+
 
 			PARAMETER
 			{
 				name = HasResource
 				type = HasResource
 				title = not have any solid rocket fuel
-				
+
 				resource = SolidFuel				
 				minQuantity = 0.0
 				maxQuantity = 0.0
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-		
+
 			}
-			
+
 			PARAMETER
 			{
 				name = HasResource
 				type = HasResource
 				title = not have any oxidizer
-				
+
 				resource = Oxidizer				
 				minQuantity = 0.0
 				maxQuantity = 0.0
-				
+
 				disableOnStateChange = false
 				hideChildren = true
-		
+
 			}
-			
+
 			disableOnStateChange = false
-		
-		}		
+
+		}
 
 		disableOnStateChange = false
 
@@ -205,111 +278,112 @@ CONTRACT_TYPE
 	{
 		name = All
 		type = All
-		title = achieve a maximum airspeed of 100 m/s
-		
+		title = achieve a maximum airspeed of @/PrettySpeed
+
 		PARAMETER
 		{
 			name = VesselParameterGroup
 			type = VesselParameterGroup
-			title = fly between 2500m and 5,000m
-			
+			title = fly @/PrettyAltRange
+	
 			vessel = @/craft
-			
+	
 			PARAMETER
 			{
 				name = ReachState
 				type = ReachState
-				
-				targetBody = Kerbin
+	
+				targetBody = HomeWorld()
 				situation = FLYING
-				minAltitude = 2500
-				maxAltitude = 5000
-
+				minAltitude = @/AltMin
+				maxAltitude = @/AltMax
+	
 				disableOnStateChange = false
 				hideChildren = true
 				hidden = true
-				
+	
 			}
-		
+	
 			completeInSequence = false
 			disableOnStateChange = false
-			hideChildren = true	
-
+			hideChildren = true
+	
 		}
-		
+	
 		PARAMETER
 		{
 			name = VesselParameterGroup
 			type = VesselParameterGroup
-			title = fly faster than 100 m/s
-			
+			title = fly faster than @/PrettySpeed
+	
 			vessel = @/craft
-			
+	
 			PARAMETER
 			{
 				name = ReachState
 				type = ReachState
-				
-				targetBody = Kerbin
+	
+				targetBody = HomeWorld()
 				situation = FLYING
-				minSpeed = 100
-
+				minSpeed = @/Speed
+	
 				disableOnStateChange = false
 				hideChildren = true
 				hidden = true
-				
+	
 			}
-		
+	
 			completeInSequence = false
 			disableOnStateChange = false
-			hideChildren = true	
-
+			hideChildren = true
+	
 		}
-
+	
 		PARAMETER
 		{
 			name = VesselParameterGroup
 			type = VesselParameterGroup
 			title = with less than 10 m/s of vertical speed
-			
+	
 			vessel = @/craft
-			
+	
 			PARAMETER
 			{
 				name = ReachState
 				type = ReachState
-				
-				targetBody = Kerbin
+	
+				targetBody = HomeWorld()
 				situation = FLYING
 				minRateOfClimb = -10
 				maxRateOfClimb = 10
-
+	
 				disableOnStateChange = false
 				hideChildren = true
 				hidden = true
-				
+	
 			}
-			
+	
 			completeInSequence = true
 			disableOnStateChange = false
 			hideChildren = true	
-
+	
 		}
-
+	
 		PARAMETER
 		{
 			name = Duration
 			type = Duration
-			
+	
 			duration = 5s
 			preWaitText = and hold for:
 			waitingText = and hold for: 
 			completionText = You did it!
-
+	
 			completeInSequence = true
-			disableOnStateChange = false			
-			
+			disableOnStateChange = false
+	
 		}
+	
 	
 		completeInSequence = true
 		disableOnStateChange = true
@@ -322,7 +396,7 @@ CONTRACT_TYPE
 		name = Any
 		type = Any
 		title = and then land and stop
-		
+
 		PARAMETER
 		{
 			name = Any
@@ -334,15 +408,15 @@ CONTRACT_TYPE
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = the KSC Runway
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = Runway
 					situation = LANDED
 					maxSpeed = 0.0
@@ -356,21 +430,21 @@ CONTRACT_TYPE
 				hideChildren = true		
 
 			}
-			
+
 			PARAMETER
 			{
 				name = VesselParameterGroup
 				type = VesselParameterGroup
 				title = or the Spaceplane Hangar Air Terminal
-				
+
 				vessel = @/craft
 
 			PARAMETER
 				{
 					name = ReachState
 					type = ReachState
-					
-					targetBody = Kerbin
+
+					targetBody = HomeWorld()
 					biome = SPH
 					situation = LANDED
 					maxSpeed = 0.0
@@ -379,16 +453,16 @@ CONTRACT_TYPE
 					hideChildren = true
 
 				}
-				
+
 				disableOnStateChange = false
 				hideChildren = true		
 
 			}
-		
+
 			disableOnStateChange = false
-		
+
 		}
-		
+
 		completeInSequence = true
 		disableOnStateChange = false
 
@@ -400,23 +474,23 @@ CONTRACT_TYPE
 		name = All
 		type = All
 		title = safely
-		
+
 		PARAMETER
 		{
 			name = VesselNotDestroyed
 			type = VesselNotDestroyed
 			title = without destroying your aircraft
-			
+
 			vessel = @/craft
 
 		}
-		
+
 		PARAMETER
 		{
 			name = KerbalDeaths
 			type = KerbalDeaths
 			title = or killing anyone
-			
+
 			vessel = @/craft
 
 		}
@@ -424,6 +498,6 @@ CONTRACT_TYPE
 		completeInSequence = true
 		disableOnStateChange = true
 
-	}	
-	
+	}
+
 }
