--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -8,10 +8,16 @@ Localization
 		#autoLOC_KPlanes_Start_001_FirstFlight_notes = Wilbur and Orville both wanted to go, but the coin they flipped landed on its side - hence the reason why they're also asking you to put up a volunteer to pilot the contraption.
 		#autoLOC_KPlanes_Start_001_FirstFlight_completedMessage = Congratulations! The flight was a success!\n\nThe historic flight was thankfully caught on camera by the lone press agent who responded to the press invitation. His article about your flight has been read by millions, and you have now spurred the imaginations of Kerbals everywhere.
 
-		#autoLOC_KPlanes_Start_002_FlyingHigher_title = Fly an airplane to <<1>>.
-		#autoLOC_KPlanes_Start_002_FlyingHigher_description = Taking off and landing is easy. Flying <<1>> with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
-		#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis = Simply launch an airplane from the runway, fly <<1>>, then land back at the runway safely.
+		#autoLOC_KPlanes_Start_002_FlyingHigher_title = Fly an airplane to an <<1>>.
+		#autoLOC_KPlanes_Start_002_FlyingHigher_description = Taking off and landing is easy. Flying at an <<1>> with an air-breathing engine and landing back at the runway... is an entirely different matter. Wilbur Kerman says runways are the roads of the future, and says your pilots might as well get used to landing on one.
+		#autoLOC_KPlanes_Start_002_FlyingHigher_synopsis = Simply launch an airplane from the runway, fly to an <<1>>, then land back at the runway safely.
 		#autoLOC_KPlanes_Start_002_FlyingHigher_notes = Enjoy the view!
 		#autoLOC_KPlanes_Start_002_FlyingHigher_completedMessage = Another historic flight completed!\n\nYour pilot is starting to showing some amazing skill with that last landing.
+
+		#autoLOC_KPlanes_Start_003_FlyingFaster_title = Achieve an airspeed of <<2>>
+		#autoLOC_KPlanes_Start_003_FlyingFaster_description = Kurtis Kerman, a friend of Wilbur Kerman, suggests that an airplane, if designed properly, should be able to exceed speeds faster than the fastest ground vehicles, and without having to dive toward the ground to do it. Wright Aeronautical is interested in helping to prove that this is possible (we're hoping you know which "this" we're referring to). They want you to take an air-breathing airplane to an <<1>> and see if you can acheive a <<2>> safely in level controlled flight, and thus break the current manned vehicle speed record.
+		#autoLOC_KPlanes_Start_003_FlyingFaster_synopsis = Simply launch an airplane from the runway, flying at an <<1>>, with a <<2>> in level flight for 5 seconds, and then land back at KSC safely.	
+		#autoLOC_KPlanes_Start_003_FlyingFaster_notes = Let's get flying!
+		#autoLOC_KPlanes_Start_003_FlyingFaster_completedMessage = Congratulations, you have set a new air speed record at a <<2>>!\n\nYou have justified Kurtis Kerman's theories on high speed air flight, and brought another measure of fame and reputation to Wright Aeronautical. Sponsors are starting to ask how they can support the new air speed frontier. Check in with Mission Control to see if Wright Aeronautical has another contract waiting for you!
 	}
 }
