--- a/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
+++ b/GameData/ContractPacks/KPlanes/Localization/en-us.cfg
@@ -19,5 +19,12 @@ Localization
 		#autoLOC_KPlanes_Start_003_FlyingFaster_synopsis = Simply launch an airplane from the runway, flying at an <<1>>, with a <<2>> in level flight for 5 seconds, and then land back at KSC safely.	
 		#autoLOC_KPlanes_Start_003_FlyingFaster_notes = Let's get flying!
 		#autoLOC_KPlanes_Start_003_FlyingFaster_completedMessage = Congratulations, you have set a new air speed record at a <<2>>!\n\nYou have justified Kurtis Kerman's theories on high speed air flight, and brought another measure of fame and reputation to Wright Aeronautical. Sponsors are starting to ask how they can support the new air speed frontier. Check in with Mission Control to see if Wright Aeronautical has another contract waiting for you!
+
+		#autoLOC_KPlanes_Start_004_Seaplane_description = Build and fly a seaplane!
+		#autoLOC_KPlanes_Start_004_Seaplane_description = You've proven the airworthiness of your aircraft so far. But can you modify it or design an aircraft that can land on water? We want you to attempt an aviation first - landing an airplane on water, and taking back off again. Our engineers would like to call such an idea a seaplane, and they think it will really be useful to a number of organizations at KSC if the idea can be proven.
+		#autoLOC_KPlanes_Start_004_Seaplane_synopsis = Land a seaplane on the surface of the water at the waypoint, and take off again and land back at KSC.
+		#autoLOC_KPlanes_Start_004_Seaplane_notes = Your craft must be an airplane that can land on water horizontally and take off again.
+		#autoLOC_KPlanes_Start_004_Seaplane_completedMessage = Congratulations on another aviation first! You have propelled your organization to one of the most popular organizations. We have credited your account with a share of funds from various investors who are excited about your organization's future.
+
 	}
 }
